Fix spacing issues when there is no sidenav.

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -56,7 +56,7 @@
 
 .posts {
   padding: 1rem 6rem 1rem;
-  margin-right: 15%;
+  /* margin-right: 15%; */
 }
 
 .postsHeader {
